# Autoresearch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.app  Dockerfile.feast  Dockerfile.train  GITHUB_WORKFLOW.md  ISSUE_33_SUMMARY.md  NOTION_GITHUB_WORKFLOW.md  README.md  airflow_settings.yaml  fetch_trending_dataset.py  packages.txt  pyproject.toml  requirements-dev.txt  requirements-feast.txt  requirements.txt  run_daily.py  youtube_pipline_TROUBLESHOOTING.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
autoresearch/: __init__.py  math_utils.py
dags/: youtube_action_log_daily.py  youtube_backfill_kr.py  youtube_trending_kr_daily.py
docs/: AGENT_SIMULATOR_SPEC.md  CTR_Model_Specification.md  README.md  claude-pr-review-test.md  data-lake.md  data-warehouse.md  feast_gcp_setup.md  midterm-report.md  pipeline-visualization.html  training-dataset.md  virtual_user_data_plan.md  virtual_user_live_qa.md
feature_repo/: .feastignore  bootstrap.py  example.py  feature_definitions.py  feature_store.yaml  generate_dummy_data.py  redis_iam.py  test_feature_retrieval.py
feature_store/: example.py  feature_store.yaml
gcp/: Dockerfile  README.md  cloudbuild.yaml  deploy.sh  main.py  requirements.txt
persona-agents/: Dockerfile  README.md  api.py  cloudbuild.yaml  common.py  deploy.sh  generate_batch.py  ingest_personas.py  requirements.txt  simulate_behavior.py
proxy/: Dockerfile  app.py  requirements.txt
scripts/: build_static_features.py  extract_kr_videos.py  feast_bootstrap.sh  gcs_code_bootstrap.sh  generate_action_logs_scale.py  generate_and_upload_dummy_data.py  load_raw_to_bigquery.py  mlflow_smoke_test.py  mock_serving_server.py  rewrite_action_log_event_ids.py  setup_feast_config.py  test_feature_retrieval.py  upload_code_archive.sh  upload_to_bigquery.py  verify_feature_retrieval.py  verify_serving_e2e.py
src/: cli.py
tests/: __init__.py  conftest.py  test_action_log_job.py  test_action_log_job_telemetry.py  test_action_log_quality_job.py  test_action_logs_cli.py  test_action_logs_daily.py  test_action_logs_llm_generator.py  test_action_logs_observability.py  test_action_logs_pipeline.py  (+70 more)
(+284 files in other folders)
